      themes\darkblue_orange\layout.inc.php, themes\original\layout.inc.php
      themes\original\css\theme_left.css.php,
      themes\original\css\theme_right.css.php:
      added variables to define (text) color for marked and hovered objects
      thanks to Juergen Wind - windkiel for hinting this bug (patch #1503529)
    * Documentation.html: updated style config option descriptions

2006-08-01 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: patch #1532493 + light editing from me,
      thanks to Isaac Bennetch

2006-08-01 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * left.php, libraries/header.inc.php:
      do not apply 'vertical scrollbar bug'-fix to IE 7
    * changelog.php: updatet CVS URL
    * libraries/dbi/mysqli.dbi.lib.php:
      bug #1532111 dbi/mysqli: MYSQLI_* constants thanks to Lierduh - lierduh

2006-07-31 Michal Čihař  <michal@cihar.com>
    * lang/czech: Updated.

2006-07-31 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * lang/german: Updated.
    * libraries/common.lib.php: use PMA_Config class for cookie needs,
      do not unset not set cookie
    * css\phpmyadmin.css.php, libraries\Config.class.php, main.php,
      themes\*: make font size user configurable

2006-07-30 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug #1526000, copy table on MySQL 5.0.23+,
      thanks to Rapsys Phoenix - rapsys

2006-07-28 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php: Protect against php code input from user (bug
      #1530370).

2006-07-27 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_pages.php: automatic layout for InnoDB tables
    * tbl_properties_operations.php: problem switching from InnoDB to MyISAM
    * tbl_printview.php, libraries/mult_submits.inc.php,
      libraries/db_table_exists.lib.php:
      bug #1521910, with selected ... print view

2006-07-26 Marc Delisle  <lem9@users.sourceforge.net>