@@ -13,6 +13,8 @@ $Source$
       added variables to define (text) color for marked and hovered objects
       thanks to Juergen Wind - windkiel for hinting this bug (patch #1503529)
     * Documentation.html: updated style config option descriptions
+    * libraries/common.lib.php: added PMA_escapeJsString() to escape strings for
+      JavaScript inside CDATA blocks
 
 2006-08-01 Marc Delisle  <lem9@users.sourceforge.net>
     * Documentation.html: patch #1532493 + light editing from me,
